<resources>
    <string name="app_name">Learnbit</string>
    <string name="ok">Okay</string>
    <string name="app_prototype_desc">Learnbit Prototype Initial Stage</string>
    <string name="launch_subtitle">Easy and Flexible Course Learning</string>
    <string name="launch_image_description">Launch Screen Image</string>
    <string name="launch_signIn_button">Sign In with existing account</string>
    <string name="launch_register_button">Create a new account</string>
    <string name="register_title">Register</string>
    <string name="register_subtitle">Create a new account to access all features</string>
    <string name="register_image_description">Register Screen Image</string>
    <string name="register_name_field">Enter your name</string>
    <string name="register_email_field">Enter your email</string>
    <string name="register_password_field">Enter your password</string>
    <string name="register_create_button">Create Account</string>
    <string name="register_signIn_button">Already has an account? Sign In</string>
    <string name="signIn_title">Sign In</string>
    <string name="signIn_subtitle">Sign in with existing account to access all features</string>
    <string name="signIn_image_description">Sign In Screen Image</string>
    <string name="signIn_email_field">Enter your email</string>
    <string name="signIn_password_field">Enter your password</string>
    <string name="signIn_signIn_button">Sign in</string>
    <string name="signIn_method_divider">or</string>
    <string name="signIn_google_button">Continue with Google</string>
    <string name="signIn_facebook_button">Continue with Facebook</string>
    <string name="role_title">What role are you?</string>
    <string name="role_subtitle">Role is used to define the content that we show to you</string>
    <string name="role_student">Student</string>
    <string name="role_teacher">Teacher</string>
    <string name="student_onboard_next_button">Next</string>
    <string name="student_onboard_skip_button">Skip</string>
    <string name="student_onboard_start_button">Get Started</string>
    <string name="student_onboard_title_a">Flexible</string>
    <string name="student_onboard_subtitle_a">Learn any courses from anywhere without needed to come to a specific place</string>
    <string name="student_onboard_title_b">Live</string>
    <string name="student_onboard_subtitle_b">Live learning gives you an experience like in the normal course</string>
    <string name="student_onboard_title_c">Quiz</string>
    <string name="student_onboard_subtitle_c">Quiz is given at the end of the course to measure your knowledge of the course</string>
    <string name="teacher_onboard_top_information">You need to add your phone number so .</string>
    <string name="teacher_onboard_cc_number_field">Credit card number</string>
    <string name="teacher_onboard_valid_until_field">Valid until</string>
    <string name="teacher_onboard_cvc_cvv_field">CVC/CVV</string>
    <string name="teacher_onboard_cc_name_field">Card holder name</string>
    <string name="teacher_onboard_bottom_information">The card holder name is the name that is written on your card.</string>
    <string name="teacher_onboard_start_button">Get Started</string>
    <string name="teacher_home">My Courses</string>
    <string name="teacher_profile">Profile</string>
    <string name="teacher_home_search_hint">Search "Your Courses"</string>
    <string name="teacher_home_search_button">Notifications"</string>
    <string name="teacher_profile_image">Profile Picture</string>
    <string name="teacher_profile_name">Edward Chandra</string>
    <string name="teacher_profile_email">edwardchandra@gmail.com</string>
    <string name="teacher_profile_status">Teacher</string>
    <string name="teacher_profile_score_credit">100</string>
    <string name="teacher_profile_score_title">Score</string>
    <string name="teacher_profile_total_balance_title">Total Active Balance</string>
    <string name="teacher_profile_total_balance_count">IDR 200.000</string>
    <string name="teacher_profile_sectionA_title">Balance</string>
    <string name="teacher_profile_sectionA_content">Withdraw Balance</string>
    <string name="teacher_profile_sectionA_content_image">Withdraw Balance Image</string>
    <string name="teacher_profile_sectionB_title">Account Settings</string>
    <string name="teacher_profile_sectionB_contentA">Edit Profile</string>
    <string name="teacher_profile_sectionB_contentB">Change Password</string>
    <string name="teacher_profile_sectionB_content_imageA">Edit Profile Image</string>
    <string name="teacher_profile_sectionB_content_imageB">Change Password Image</string>
    <string name="teacher_profile_sectionC_title">Support</string>
    <string name="teacher_profile_sectionC_contentA">About Learnbit</string>
    <string name="teacher_profile_sectionC_contentB">Frequently Asked Questions</string>
    <string name="teacher_profile_sectionC_contentC">Share Learnbit</string>
    <string name="teacher_profile_sectionC_content_imageA">About Learnbit Image</string>
    <string name="teacher_profile_sectionC_content_imageB">Frequently Asked Questions Image</string>
    <string name="teacher_profile_sectionC_content_imageC">Share Learnbit Image</string>
    <string name="teacher_profile_switch_to_student_button">Switch to Student</string>
    <string name="teacher_profile_sign_out_button">Sign Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cheeseIpsum">When the cheese comes out everybody\'s happy chalk and cheese rubber cheese. Cheesecake when the cheese comes out everybody\'s happy parmesan everyone loves macaroni cheese cheeseburger fromage frais goat. Cut the cheese the big cheese fromage frais cheddar goat paneer emmental cheddar. Fromage feta cauliflower cheese goat cheese and wine cheese and wine fromage.</string>
    <string name="reviewIpsum">Definitely a recommendation to everyone who wants to learn about a space. The teacher is nice and answer all of my questions with a easy to understand, uncomplicated answer with an example.</string>
    <string name="price">IDR  %1$d</string>
    <string name="divider">%1$s - %2$s</string>
    <string name="schedule_availability">%1$d Schedule Available</string>
    <string name="schedule_time">Every %1$s at %2$s </string>
    <string name="teacher_rating">%1$,.1f Average Rating</string>
    <string name="course_count">Teach in %1$d Course(s)</string>
    <string name="course_applied">Course Applied</string>
    <string name="default_onclick">Nothing Happened</string>
    <string name="name_field_error">Name must not be empty</string>
    <string name="name_field_error_character">Name must be more than 2 characters</string>
    <string name="email_field_error">Email must not be empty</string>
    <string name="email_field_error_format">Email must be in valid format</string>
    <string name="password_field_error">Password must not be empty</string>
    <string name="password_field_error_character">Password must be more than 6 characters</string>
    <string name="failed_registration">Registration failed. Account has already exist.</string>
    <string name="failed_registration_cancelled">Registration failed. Please check your network connection.</string>
    <string name="failed_signin">Sign In Failed. Please check your network connection.</string>
    <string name="profile_name_key">profilename</string>
    <string name="profile_email_key">profileemail</string>
    <string name="permission_granted">Permission has been granted</string>
    <string name="permission_declined">Permission has been declined</string>
    <string name="awaiting_admin_confirmation">Awaiting admin confirmation</string>
    <string name="course_start_time">Course starts at %1$s</string>
    <string name="no_course">There are no course ahead</string>
    <string name="rating_count">%1$d total ratings</string>
    <string name="rating_text">%1$,.1f</string>
    <string name="rating_progress_bar">%1$d</string>
    <string name="course_student_count">%1$d student(s)</string>
    <string name="no_course_student">Your course has no student yet</string>
    <string name="retrieve_failed">Failed to retrieve stored data.</string>
    <string name="save_failed">Failed to save data.</string>
    <string name="save_success">Successfully save data.</string>
    <string name="upload_failed">Failed to upload profile picture.</string>
    <string name="delete_failed">Failed to delete course.</string>
    <string name="no_student">Currently your course has no student</string>
    <string name="no_review">Currently your course has no review</string>
    <string name="delete_file_notice">Are you sure you want to delete this file?</string>
    <string name="file_uploading">Recent Uploads</string>
    <string name="material">Materials</string>
    <string name="benefit_error">Please specify your course\'s benefit</string>
    <string name="requirement_error">Please specify your course\'s requirement</string>
    <string name="curriculum_error">Please specify your course\'s curriculum</string>
    <string name="requirement_hint">Enter your course requirement</string>
    <string name="benefit_hint">What benefit does the student get?</string>
    <string name="time_hint">Select your course time</string>
    <string name="week_count">Week %1$d</string>
    <string name="start_date_error">Course start date must not be empty</string>
    <string name="end_date_error">Course end date must not be empty</string>
    <string name="course_length_error">Course must be more than 2 weeks</string>
    <string name="time_schedule_error">Course must have a time schedule</string>
    <string name="price_error">Price must not be empty</string>
    <string name="terms_error">Please read and agree with the terms and conditions</string>
    <string name="upload_success">Profile picture successfully changed</string>
    <string name="course_finish">You have finished this course</string>
    <string name="description_empty">This teacher has yet to leave a description.</string>
    <string name="password_not_match">Entered password doesn\'t match your account password. Please recheck your password.</string>
    <string name="withdraw_process">The withdraw process will take 2 – 3 days to be finished as we need to authenticate it.</string>
    <string name="withdraw_title">Withdraw request with amount of IDR %1$d</string>
    <string name="withdraw_amount_error">Withdraw amount must not be empty</string>
    <string name="bank_holder_error">Bank holder name must not be empty</string>
    <string name="bank_number_error">Bank number must not be empty</string>
    <string name="pending_status">Pending</string>
    <string name="processing_status">Processing</string>
    <string name="success_status">Success</string>
    <string name="failed_status">Failed</string>
    <string name="course_start_period">Course period has not started yet</string>
    <string name="course_end_period">Course period has ended</string>
    <string name="course_end_period_status">Course ended</string>
    <string name="submit_text">Submitted Files</string>
    <string name="terminate_request">Terminate request is being processed.</string>
    <string name="terminate_error">Reason of termination must not be empty</string>
    <string name="rating_status_0">Hated it</string>
    <string name="rating_status_1">Didn\'t like it</string>
    <string name="rating_status_2">Not really good</string>
    <string name="rating_status_3">Just OK</string>
    <string name="rating_status_4">Like it</string>
    <string name="rating_status_5">Perfect</string>
    <string name="call_button_rating">Give Rating</string>
    <string name="no_category_course">There\'s no course in this category yet</string>
    <string name="featured_course">Featured Course</string>
    <string name="all_course">All Course</string>
</resources>