<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".launch.launch.RegisterActivity"
    android:background="@android:color/white">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/rounded_corners_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/registerToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginBottom="22dp"
            android:contentDescription="@string/register_image_description"
            app:srcCompat="@drawable/launch_illustration" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/register_title"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_subtitle"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        android:orientation="vertical">


        <EditText
            android:id="@+id/register.NameET"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custom_text_edit"
            android:ems="10"
            android:hint="@string/register_name_field"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textColorHint="@color/darkGray"/>

        <EditText
            android:id="@+id/register.EmailET"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/register_email_field"
            android:inputType="textEmailAddress"
            android:background="@drawable/custom_text_edit"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textColorHint="@color/darkGray"/>

        <EditText
            android:id="@+id/register.PasswordET"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/register_password_field"
            android:inputType="textPassword"
            android:background="@drawable/custom_text_edit"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textColorHint="@color/darkGray"/>

        <Button
            android:id="@+id/register.CreateAccountButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/second_primary_button"
            android:text="@string/register_create_button"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/register.SignInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:background="@android:color/transparent"
            android:textColor="@color/primaryColor"
            android:text="@string/register_signIn_button"
            android:textAllCaps="false"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>