<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".launch.launch.RoleActivity"
    android:background="@drawable/background_gradient">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/role_title"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/role_subtitle"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/role.StudentButton"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/secondary_rounded_corners_view"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:srcCompat="@drawable/student_role" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/role_student"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/role.TeacherButton"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/secondary_rounded_corners_view"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:srcCompat="@drawable/teacher_role" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/role_teacher"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>