<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".launch.onboard.student.StudentOnboardActivity"
    android:background="@drawable/background_gradient">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/onboard.SkipButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:text="@string/student_onboard_skip_button"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/onboard.NextButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/primary_button"
            android:text="@string/student_onboard_next_button"
            android:textAllCaps="false"
            android:textColor="@color/primaryColor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/onboard.StartButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/primary_button"
            android:fontFamily="sans-serif-medium"
            android:text="@string/student_onboard_start_button"
            android:textAllCaps="false"
            android:textColor="@color/primaryColor"
            android:textSize="16sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/onboard.Viewpager"
        android:layout_width="wrap_content"
        android:layout_height="600dp"
        app:layout_constraintBottom_toTopOf="@+id/onboard.TabLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

    </androidx.viewpager.widget.ViewPager>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/onboard.TabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabGravity="center"
        app:tabBackground="@drawable/tab_indicator_selector"
        app:tabIndicator="@drawable/tab_indicator_selector"
        app:tabIndicatorColor="#FFFFFF"
        app:tabRippleColor="@android:color/transparent"
        app:tabUnboundedRipple="false">


    </com.google.android.material.tabs.TabLayout>


</androidx.constraintlayout.widget.ConstraintLayout>